# OOP-Practice

./: .gitmodules
Card/: CMakelists.txt  bitcard.hpp  card.cpp  card.hpp  cardUnion.hpp
Game/: README.md
Game/ParaviaNew/: CMakelists.txt  ParaviaBuy.cpp  ParaviaBuy.hpp  ParaviaHelp.hpp  ParaviaInterface.cpp  ParaviaInterface.hpp  ParaviaPlay.cpp  ParaviaPlay.hpp  main.cpp
Game/ParaviaNew2/: CMakeLists.txt  ParaviaBuy.cpp  ParaviaHelp.hpp  ParaviaInterface.cpp  ParaviaPlay.cpp  main.cpp
Game/ParaviaOld/: CMakelists.txt
Game/ParaviaOld/build_c/: CMakeCache.txt  Makefile  Santa  cmake_install.cmake
rational/: CMakeLists.txt  Rational.cpp  Rational.hpp
